WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87214
Short-circuit Element::attrIfExists() when the Element has no Attr list.
https://bugs.webkit.org/show_bug.cgi?id=87214
Summary
Short-circuit Element::attrIfExists() when the Element has no Attr list.
Andreas Kling
Reported
2012-05-22 22:31:37 PDT
Lukewarm (0.4%) on Dromaeo/dom-attr.
Attachments
A patchwork orange
(1.30 KB, patch)
2012-05-22 22:32 PDT
,
Andreas Kling
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-05-22 22:32:43 PDT
Created
attachment 143463
[details]
A patchwork orange
Ryosuke Niwa
Comment 2
2012-05-22 22:34:09 PDT
Comment on
attachment 143463
[details]
A patchwork orange View in context:
https://bugs.webkit.org/attachment.cgi?id=143463&action=review
> Source/WebCore/dom/Element.cpp:2087 > + if (!hasAttrList()) > + return 0; > if (!attributeData()) > return 0;
Should we combine these if statements?
Ryosuke Niwa
Comment 3
2012-05-22 22:37:35 PDT
Comment on
attachment 143463
[details]
A patchwork orange View in context:
https://bugs.webkit.org/attachment.cgi?id=143463&action=review
>> Source/WebCore/dom/Element.cpp:2087 >> return 0; > > Should we combine these if statements?
Per IRC discussion, please convert the latter condition to an assertion.
Andreas Kling
Comment 4
2012-05-22 23:17:24 PDT
Committed
r118127
: <
http://trac.webkit.org/changeset/118127
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug