Short-circuit Element::attrIfExists() when the Element has no Attr list. <http://webkit.org/b/87214>

Patch by Hayato Ito <hayato@chromium.org> on 2012-05-22
Reviewed by Ryosuke Niwa.

This function was lukewarm on Dromaeo/dom-attr (0.4% of samples.)
Added an early return if !hasAttrList() to avoid the function call overhead of
ElementAttributeData::attrIfExists().

* dom/Element.cpp:
(WebCore::Element::attrIfExists):

git-svn-id: svn://svn.chromium.org/blink/trunk@118127 bbb929c8-8fbe-4397-9dbb-9b2b20218538